--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.49.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.10.5"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7"
   }
 }
