--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "moment-timezone": "^9.0.0",
+    "winston": "^3.17.0"
   }
 }
