--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "vin-pw-enterpriseframework-alchemist",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": { 
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
     "@faker-js/faker": "^9.4.0",
     "@playwright/test": "^1.49.1",
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "^22.10.5"
+    "@types/node": "^22.10.5",
+    "eslint": "^9.18.0",
+    "globals": "^15.14.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.21.0"
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
